@@ -443,5 +443,11 @@ drop1(glm(y ~ 1))
 stats:::drop1.default(glm(y ~ 1))
 ## gave error in R < 3.1.2
 
+## getAnywhere() wrongly dealing with namespace hidden list object
+nm <- deparse(body(pbinom)[[2]])# == "C_pbinom" currently
+gg <- getAnywhere(nm)
+stopifnot(length(gg$objs) == 1)
+## was 4 and printed "4 differing objects matching ‘C_pbinom’ ..." in R <= 3.1.1
+
 
 proc.time()
